add validation and put books
