# src/main/java/com/belatrix/library/books/resources/BookRest.java
@@ -4,6 +4,7 @@ import com.belatrix.library.books.model.Book;
 import com.belatrix.library.books.services.BookService;
 import com.belatrix.library.books.services.BookServiceImpl;
 
+import javax.validation.Valid;
 import javax.ws.rs.*;
 import javax.ws.rs.core.Context;
 import javax.ws.rs.core.MediaType;
@@ -27,11 +28,27 @@ public class BookRest {
 
     @POST
     @Consumes(MediaType.APPLICATION_JSON)
-    public Response createBook(@Context UriInfo info, Book book){
+    public Response createBook(@Context UriInfo info, @Valid Book book){
 
         Integer id = bookService.createBook(book);
         URI uri = info.getRequestUriBuilder().path("{id}").build(id);
         return Response.created(uri).build();
+    }
+
+    @PUT
+    @Consumes(MediaType.APPLICATION_JSON)
+    @Path("/{id}")
+    public Response updateBook(Book book, @PathParam("id") Integer id) {
+        try {
+            bookService.updateBook(book, id);
+            return Response.noContent().build();
+        } catch (NotFoundException nfe) {
+            return Response.status(Response.Status.NOT_FOUND).entity(nfe.getMessage()).build();
+        } catch (IllegalArgumentException iae) {
+            return Response.status(Response.Status.BAD_REQUEST).entity(iae.getMessage()).build();
+        } catch (Exception e){
+            return Response.serverError().entity(e.getMessage()).build();
+        }
     }
 
     @GET
